[package]
name = "monkey-d-tcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.0", features = ["full"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
