[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions - too noisy for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
ignored_unit_patterns = "allow"
uninlined_format_args = "allow"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1.0", features = ["full"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
