[package]
name = "basic-tcp-proxy"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
ctrlc.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
echo-server = { path = "../echo-server" }
